# cmd/api/docs/swagger.json
@@ -14,7 +14,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Users"
+                    "Auth"
                 ],
                 "summary": "Login user",
                 "parameters": [
@@ -40,7 +40,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/service.LoginUserResponse"
+                                            "$ref": "#/definitions/model.UserDetailNoPasswordResponse"
                                         }
                                     }
                                 }
@@ -66,7 +66,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Users"
+                    "Auth"
                 ],
                 "summary": "Register user",
                 "parameters": [
@@ -92,7 +92,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/model.User"
+                                            "$ref": "#/definitions/model.UserDetailNoPasswordResponse"
                                         }
                                     }
                                 }
@@ -250,14 +250,23 @@
                 }
             }
         },
-        "service.LoginUserResponse": {
+        "model.UserDetailNoPasswordResponse": {
             "type": "object",
             "properties": {
-                "token": {
+                "createdAt": {
                     "type": "string"
                 },
-                "user": {
-                    "$ref": "#/definitions/model.User"
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "type": "string"
                 }
             }
         }
